Fix bbPress overflow hidden for the replies container.
We're in 2013 and yet we still have to do this CSS hack for layout issues.

Roll on CSS Level 4!

--- a/css/less/bbpress.less
+++ b/css/less/bbpress.less
@@ -599,3 +599,7 @@ span.bbp-author-ip {
 	font-size: 9px !important;
 	font-weight: 300 !important;
 }
+
+#bbpress-forums ul.bbp-replies {
+	overflow: auto !important;
+}
